fixes #113 (filled position bars wrapping)

--- a/src/main/java/com/mayhew3/drafttower/client/filledpositions/FilledPositionsChart.css
+++ b/src/main/java/com/mayhew3/drafttower/client/filledpositions/FilledPositionsChart.css
@@ -5,6 +5,7 @@
 
 .positionPanel {
   position: relative;
+  white-space: nowrap;
 }
 
 .positionLabel {
@@ -18,7 +19,7 @@
   display: inline-block;
   padding: 3px 0;
   text-align: center;
-  width: 100px;
+  width: 70px;
   margin: 2px 0;
 }
 
